@@ -12,8 +12,8 @@ public final class ForgeLanSessionState {
     private static volatile boolean allowCommandsEnabled;
     private static volatile boolean fixedCodeEnabled;
     private static volatile String fixedCode = "";
-    private static volatile Map<String, String> gameRuleSnapshot = Map.of();
-    private static volatile Map<String, String> defaultGameRuleSnapshot = Map.of();
+    private static volatile Map<String, String> gameRuleSnapshot = java.util.Collections.emptyMap();
+    private static volatile Map<String, String> defaultGameRuleSnapshot = java.util.Collections.emptyMap();
 
     private ForgeLanSessionState() {
     }
@@ -74,7 +74,7 @@ public final class ForgeLanSessionState {
     }
 
     public static String getFixedCode() {
-        if (fixedCode.isBlank()) {
+        if (fixedCode.trim().isEmpty()) {
             fixedCode = SafraClientConfig.get().ensureOpenToLanFixedCode();
         }
         return fixedCode;
@@ -99,7 +99,7 @@ public final class ForgeLanSessionState {
 
     public static void resetGameRules() {
         gameRuleSnapshot = defaultGameRuleSnapshot.isEmpty()
-            ? Map.of()
+            ? java.util.Collections.<String, String>emptyMap()
             : new LinkedHashMap<>(defaultGameRuleSnapshot);
         SafraClientConfig.get().setOpenToLanGameRules(gameRuleSnapshot);
     }
